# spectral_trend_database

./: .gitignore  README.md  conda-env.yaml  myst.yml  package_names.txt  package_names.yaml  pypi_package_names.txt  pyproject.toml  stdb.config.yaml  stdb_20241203.yml
.github/workflows/: deploy.yml  test_deploy.yml
config/: user.example.yaml
config/named_queries/: v1.yaml
config/spectral_indices/: v1.yaml
crop_yield_database/: constants.py  gcp.py  query.py  utils.py
docs/: README.md  conf.py  index.md
docs/pages/: database.md  query.md  start.md
myst/: main.md
nb/: smoothed-sample.2020.json
notes/: gee.md  spectral_indices.yaml
scripts/: archive.step-0.export_landsat_yield_data.py  archive.step-1.preprocess_raw_data.py  archive.step-4.bigquery_tables.py  deploy.py  json_to_parquet.py  run.sh  step-0.export_landsat_yield_data.py  step-0.process_qdann_yield_data.py  step-0.samples_and_qdann_yield.py  step-1.export_cdl_corn_soy.py  step-1.export_landsat_data.py  step-1.preprocess_raw_data.py  step-2.bigquery_tables.py  step-2.export_landsat_data.py  step-3.bigquery_tables.py  step-3.raw_spectral_indices.py  step-4.bigquery_tables.py  step-4.gap_filling_and_smoothing.py  step-5.cover_crop_features.py  step-5.gap_filling_and_smoothing.py  step-5.indices-stats.py  step-6.cover_crop_features.py  step-6.indices-stats.py  step-7.cover_crop_features.py  test.py
site/: intro.json  myst.search.json  objects.inv  scripts.html  scripts.json  spectral-trends.html  spectral-trends.json
spectral_trend_database/: cli.py  config.py  constants.py  gcp.py  interface.py  npxr.py  paths.py  query.py  runner.py  smoothing.py  spectral.py  types.py  utils.py
(+57 files in other folders)
