[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "spectral_trend_database"
version = "0.0.2"
readme = "README.md"
dependencies = [
	"click",
	"numpy",
	"pandas",
	"scipy",
	"xarray",
	"affine",
	"pandas-gbq>=0.27.0,<0.28",
	"geopandas>=1.0.1,<2",
	"dask>=2025.2.0,<2026",
	"geojson>=3.2.0,<4",
	"shapely>=2.0.7,<3",
	"xarray-datatree>=0.0.14,<0.0.15",
	"zarr>=3.0.3,<4",
	"earthengine-api>=1.5.3,<2",
	"xee>=0.0.20,<0.0.21",
	"gcsfs>=2025.2.0,<2026",
	"sphinx>=8.2.0,<9",
	"sphinx-autodoc2>=0.5.0,<0.6",
	"mystmd>=1.3.6,<2",
	"myst-parser>=4.0.1,<5",
	"furo>=2024.8.6,<2025",
	"python-geohash>=0.8.5,<0.9",
	"pandas-stubs>=2.2.3.241126,<3",
	"types-requests>=2.32.0.20241016,<3",
	"types-pyyaml>=6.0.12.20241230,<7",
	"mproc>=0.0.0.4,<0.0.0.5",
	"build>=1.2.2.post1,<2",
	"twine>=6.1.0,<7"
]

[project.scripts]
stdb = "spectral_trend_database:cli.cli"

[tool.setuptools]
packages = [
	"spectral_trend_database",
	"spectral_trend_database.gee"
]
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
spectral_trend_database = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
pycodestyle = ">=2.12.1,<3"
mypy = ">=1.15.0,<2"
h3-py = ">=4.2.1,<5"
rasterio = ">=1.4.3,<2"
jupyterlab = ">=4.3.5,<5"
jupyterlab-myst = ">=2.4.2,<3"
jupyter-dash = ">=0.4.2,<0.5"
ipykernel = ">=6.29.5,<7"
ipywidgets = ">=8.1.5,<9"
matplotlib = ">=3.10.0,<4"
seaborn = ">=0.13.2,<0.14"
duckdb = ">=1.2.0,<2"
altair-all = ">=5.5.0,<6"
ibis-duckdb = ">=10.0.0,<11"
